# drf-s3-direct

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  tasks.py
.github/workflows/: checks.yml
drf_s3_direct/: apps.py  fields.py  imagekit_fields.py  keys.py  s3_configs.py  services.py  utils.py
drf_s3_direct/api/: fields.py  permissions.py  scheme.py  serializers.py  urls.py  views.py
tests/: conftest.py  manage.py  settings.py  test_download.py  test_params_validation.py  test_upload.py  urls.py  utils.py
tests/example_app/: apps.py  factories.py  models.py
tests/example_app/api/: permissions.py  serializers.py  views.py
tests/example_app/migrations/: 0001_initial.py
